--- a/markdown/20180910.md
+++ b/markdown/20180910.md
@@ -7,12 +7,34 @@ Slug: Week1
 Author: 40623228
 ---
 
-
+當週課程內容:練習github.io建立個人網站 
 <!-- PELICAN_END_SUMMARY -->
-
-課程倉儲
 ----
+problem1 : git指令不熟悉
 
+solution1 : 
+<pre><code>
+git 常用指令
+git add .
+新增所有改版內容
+git commit -m "提交訊息, 用來辨識版本"
+在近端提交改版內容
+git push
+將近端改版內容推送到遠端
+git pull
+拉下遠端新版本內容, 在 fossil scm 使用 fossil update
+git log
+查驗 git 提交推送紀錄
+git status
+查驗狀態
+git 新增提交推送的身分綁定
+以 scrum1@mde.tw 註冊帳號為 scrum-1 為例:
+git config --global user.name "scrum-1"
+git config --global user.email "scrum1@mde.tw"
+若網路直接連線過慢, 可以透過 proxy 執行 git
+git config --global http.proxy http://proxy.kmol.info:3128
+以上的 git config 會將設定存入 Y:/home/.gitconfig 檔案中
+</code></pre>
 
 ----
 
