--- a/markdown/20180917.md
+++ b/markdown/20180917.md
@@ -6,13 +6,14 @@ Tags: CADPb
 Slug: Week2
 Author: 40623228
 ---
-
-
+當週課程內容:
+領取課程倉儲
+管理個人網站內容及投影片
 <!-- PELICAN_END_SUMMARY -->
-
-課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
