--- a/markdown/20181029.md
+++ b/markdown/20181029.md
@@ -7,12 +7,15 @@ Slug: Week8
 Author: 40623228
 ---
 
-
+當週課程內容:
+說明機電資整合設計專案流程所需的相關套件運用與技術
 <!-- PELICAN_END_SUMMARY -->
 
 課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
