--- a/markdown/20180924.md
+++ b/markdown/20180924.md
@@ -7,12 +7,17 @@ Slug: Week3
 Author: 40623228
 ---
 
-
+當週課程內容:
+Onshape 說明
+Onshape Week1
+Onshape Week1  homework
 <!-- PELICAN_END_SUMMARY -->
 
 課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
