--- a/markdown/20181008.md
+++ b/markdown/20181008.md
@@ -7,12 +7,16 @@ Slug: Week5
 Author: 40623228
 ---
 
-
+當週課程內容:
+Onshape Week2
+Onshape Week2  homework
 <!-- PELICAN_END_SUMMARY -->
 
 課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
