--- a/markdown/20181015.md
+++ b/markdown/20181015.md
@@ -7,12 +7,17 @@ Slug: Week6
 Author: 40623228
 ---
 
-
+當週課程內容:
+說明如何升級最新的CMSimfly倉儲中的flaskapp.py
+Onshape Week3
+Onshape Week3  homework
 <!-- PELICAN_END_SUMMARY -->
 
 課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
