--- a/markdown/20181022.md
+++ b/markdown/20181022.md
@@ -7,12 +7,16 @@ Slug: Week7
 Author: 40623228
 ---
 
-
+當週課程內容:
+領取課程倉儲
+說明如何利用Virtualbox安裝 Ubuntu18.04.1伺服器，目的在自行建立Fossil SCM
 <!-- PELICAN_END_SUMMARY -->
 
 課程倉儲
 ----
+problem1 : 
 
+solution1 : 
 
 ----
 
